Separado o CSS do historico de todo o resto

--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="/media/js/home.js"></script>
 <!-- this is here due stat_block.html -->
 <script type="text/javascript" src="/media/js/procedures.js"></script>
-<link rel="stylesheet" type="text/css" href="/media/css/procedures.css" />
+<link rel="stylesheet" type="text/css" href="/media/css/historico.css" />
 {% endblock %}
 
 {% block content %}
