--- a/nimbus/procedures/templates/procedures_list.html
+++ b/nimbus/procedures/templates/procedures_list.html
@@ -3,6 +3,7 @@
 {% block headtags %}
 <script type="text/javascript" src="/media/js/procedures.js"></script>
 <link rel="stylesheet" type="text/css" href="/media/css/procedures.css" />
+<link rel="stylesheet" type="text/css" href="/media/css/historico.css" />
 
 {% endblock %}
 
