--- a/nimbus/procedures/templates/procedures_history.html
+++ b/nimbus/procedures/templates/procedures_history.html
@@ -2,7 +2,7 @@
 
 {% block headtags %}
 <script type="text/javascript" src="/media/js/procedures.js"></script>
-<link rel="stylesheet" type="text/css" href="/media/css/procedures.css" />
+<link rel="stylesheet" type="text/css" href="/media/css/historico.css" />
 
 {% endblock %}
 
