Graficos e About são alterados pelo CSS do produto

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -14,8 +14,8 @@
 	<link rel="stylesheet" type="text/css" href="/media/js/progressbar/jquery.ui.all.css" />
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/date_input.css" />
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/css3buttons.css" />
-	<!-- <link rel="stylesheet" type="text/css" href="/media/css/professional.css" /> -->
-	<link rel="stylesheet" type="text/css" href="/media/css/opensource.css" />
+	<link rel="stylesheet" type="text/css" href="/media/css/professional.css" />
+	<!-- <link rel="stylesheet" type="text/css" href="/media/css/opensource.css" /> -->
 	
 	
 	<script type="text/javascript" src="/media/jquery.js"></script>
