--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -14,9 +14,11 @@
 	<link rel="stylesheet" type="text/css" href="/media/js/progressbar/jquery.ui.all.css" />
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/date_input.css" />
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/css3buttons.css" />
+	{% if product == "professional" %}
 	<link rel="stylesheet" type="text/css" href="/media/css/professional.css" />
-	<!-- <link rel="stylesheet" type="text/css" href="/media/css/opensource.css" /> -->
-	
+	{% else %}
+	<link rel="stylesheet" type="text/css" href="/media/css/opensource.css" />
+	{% endif %}
 	
 	<script type="text/javascript" src="/media/jquery.js"></script>
 	<script type="text/javascript" src="/media/jquery.cookie.js"></script>
