Removida ligação com Offsite. Usando agora RunAfter

--- a/nimbus/procedures/templates/procedures_list.html
+++ b/nimbus/procedures/templates/procedures_list.html
@@ -37,17 +37,6 @@
                         <form action="/procedures/{{procedure.id}}/execute/" method="post" class="floatright">
                             <button type="submit" class="css3button positive" value="Executar agora">Executar Agora</button>
                         </form>
-                        {%  if offsite_on %}
-                            {% if not procedure.offsite_on %}
-                            <form action="/procedures/{{procedure.id}}/activate_offsite/" method="post" class="floatright">
-                                <button type="submit" class="css3button positive" value="Ativar Offsite">Ativar Offsite</button>
-                            </form>
-                            {% else %}
-                            <form action="/procedures/{{procedure.id}}/deactivate_offsite/" method="post" class="floatright">
-                                <button type="submit" class="css3button negative" value="Desativar Offsite">desativar Offsite</button>
-                            </form>
-                            {% endif %}
-                        {% endif %}
                         {% if not procedure.active %}
                         <form action="/procedures/{{procedure.id}}/activate/" method="post" class="floatright">
                             <button type="submit" class="css3button positive" value="Ativar">Ativar</button>
@@ -61,7 +50,6 @@
                     <h4>{% if not procedure.active %}PROCEDIMENTO DESATIVADO{% else %}CONFIGURAÇÕES DO PROCEDIMENTO{% endif %}</h4>
                     <div class="procedure-config {% if not procedure.active %}inactive{% endif %}">
                         <div>
-                            Offsite ativado: <strong>{{procedure.offsite_on|yesno:"Sim,Não"}}</strong><br/>
                             Conjunto de arquivos: <strong>{{procedure.fileset.name}}</strong>
 							{% if procedure.fileset.is_model %}
 								[Perfil]
@@ -73,6 +61,12 @@
 							{% endif %}
 							<br/>
                             Tempo de retenção dos arquivos: <strong>{{procedure.pool_retention_time}}</strong>
+							{% if procedure.run_after.all %}
+							<br/>Tarefas Pós-backup:
+							{% for task in procedure.run_after.all %}
+							<li>{{task}}</li>
+							{% endfor %}
+							{% endif %}
                         </div>
                         <div class="clear"></div>
                     </div>
