Rescrever os arquivos quando o Creator de um RunAfter for alterado

--- a/nimbus/procedures/templates/procedures_list.html
+++ b/nimbus/procedures/templates/procedures_list.html
@@ -64,7 +64,11 @@
 							{% if procedure.run_after.all %}
 							<br/>Tarefas Pós-backup:
 							{% for task in procedure.run_after.all %}
+							{% if task.active %}
 							<li>{{task}}</li>
+							{% else %}
+							<li class="inactive_task">{{task}}</li>
+							{% endif %}
 							{% endfor %}
 							{% endif %}
                         </div>
