Removendo views do offsite da app procedures

--- a/nimbus/offsite/templates/offsite_menu.html
+++ b/nimbus/offsite/templates/offsite_menu.html
@@ -4,6 +4,6 @@
 	    <li><a href="/offsite/edit">Editar configurações</a></li>
         <li><a href="/offsite/list_uploadrequest">Uploads ativos</a></li>
         <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
-        <li><a href="/procedures/list_offsite">Procedimentos do offsite</a></li>
+        <li><a href="/offsite/list_offsite">Procedimentos do offsite</a></li>
     </ul>
 </li>
