--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -34,13 +34,13 @@
 
 		    <!-- <div class="block_content tab_content" id="backup-bytes"> -->
 		    <div class="block_content" id="backup-bytes">
-		        {% with table1 as table %}
+		        {% with grafico_backup_dados as table %}
 			        {% include "table_chart.html" %}
 			    {% endwith %}
 		    </div>
     		<!-- <div class="block_content tab_content" id="backup-files"> -->
     		<div class="block_content" id="backup-files">
-			    {% with table2 as table %}
+			    {% with grafico_backup_arquivos as table %}
 			        {% include "table_chart.html" %}
 			    {% endwith %}
     		</div>
@@ -63,12 +63,20 @@
 
     		<div class="block_content">
                 <div class="right" id="disc-use">
-                {% if table3 %}
-    			    {% with table3 as table %}
+                {% if grafico_uso_disco %}
+    			    {% with grafico_uso_disco as table %}
     			        {% include "table_chart.html" %}
     			    {% endwith %}
                 {% else %}
                     <h2>Ocupação em disco</h2>
+                    <p><em>Sem uso do disco</em></p>
+                {% endif %}
+                {% if grafico_uso_offsite %}
+    			    {% with grafico_uso_offsite as table %}
+    			        {% include "table_chart.html" %}
+    			    {% endwith %}
+                {% else %}
+                    <h2>Ocupação do Offsite</h2>
                     <p><em>Sem uso do disco</em></p>
                 {% endif %}
                 </div>
@@ -81,13 +89,13 @@
                 <div id="memory-use">
                     <div class="left memory">
                         <h4>Uso da Memória</h4>
-                        {% with table4.lines.Ocupado.0 as value %}
+                        {% with grafico_uso_memoria.lines.Ocupado.0 as value %}
         			        {% include "bar_chart.html" %}
         			    {% endwith %}
     			    </div>
     			    <div class="right cpu">
                         <h4>Uso da CPU</h4>
-                        {% with table5.lines.Ocupado.0 as value %}
+                        {% with grafico_uso_cpu.lines.Ocupado.0 as value %}
         			        {% include "bar_chart.html" %}
         			    {% endwith %}
                     </div>
