--- a/nimbus/base/templates/license_general.html
+++ b/nimbus/base/templates/license_general.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" type="text/css" href="/media/css/procedures.css" />
 
 
-    <script type="text/javascript" src="/media/js/home.js"></script>
+    <script type="text/javascript" src="/media/js/graphs.js"></script>
 	
 </head>
 <body>
