--- a/nimbus/storages/templates/storage_graph.html
+++ b/nimbus/storages/templates/storage_graph.html
@@ -1,6 +1,6 @@
 <div style="width: {% if table.width %}{{table.width}}{% else %}100%{% endif %};">
     <h2>{{block.title}}</h2>
-    <div id="{{block.cid_name}}" charttype="{{block.type}}" class="jqplotchart" style="height:{% if block.height %}{{block.height}}px{% else %}150px{% endif %};">
+    <div id="{{block.cid_name}}" charttype="{{block.type}}" class="jqplotchartw" style="height:{% if block.height %}{{block.height}}px{% else %}150px{% endif %};">
         {% for key, line in block.lines.items %}
         <chartdata>{{line|join:","}}</chartdata>
         {% endfor %}
