Filtros de arquivos adicionados

--- a/nimbus/procedures/templates/profile_list.html
+++ b/nimbus/procedures/templates/profile_list.html
@@ -66,6 +66,14 @@
                             {% for file in fileset.files.all %}
                             <li>{{file.path}}</li>
                             {% endfor %}
+							Sendo apenas aqueles nos padrões abaixo:<br/>
+                            {% for wildcard in fileset.includes %}
+                            <li>{{wildcard.expression}}</li>
+                            {% endfor %}
+							Com exceção daqueles nos padrões abaixo:<br/>
+                            {% for wildcard in fileset.excludes %}
+                            <li>{{wildcard.expression}}</li>
+                            {% endfor %}
                         </ul>
                         </div>
                     </div><!-- .right -->
@@ -128,6 +136,7 @@
 			<hr />
             {% endfor %}
 		</div><!-- .schedule -->
+		<div class="clear"></div><hr />
     </div>
     <div class="bendl"></div>
 	<div class="bendr"></div>
