--- a/nimbus/filesets/templates/add_fileset.html
+++ b/nimbus/filesets/templates/add_fileset.html
@@ -2,6 +2,8 @@
 <script type="text/javascript" src="/media/js/filesets.js"></script>
 <script type="text/javascript" src="/media/js/veezortree.js"></script>
 <link rel="stylesheet" type="text/css" href="/media/css/veezortree.css"/>
+<!-- <script type="text/javascript" src="/media/js/filefilter.js"></script> -->
+<link rel="stylesheet" type="text/css" href="/media/css/filefilter.css"/>
 {% endblock %}
 
 {% block page %}
@@ -18,7 +20,46 @@
 			<input type="hidden" name="files-INITIAL_FORMS" value="0" id="id_files-INITIAL_FORMS">
 			<input type="hidden" name="files-MAX_NUM_FORMS" id="id_files-MAX_NUM_FORMS">
 			<input type="hidden" value="{{ computer.id }}" id="computer_id" />
-			<hr />
+			<button class="css3button negative" id="show_filters_button">Mostrar filtros</button>
+			<div id="filter_hidden_block">
+				<hr>
+				<label>Filtros:</label>
+				<table>
+					<tr>
+						<td>
+							Apenas estes<br/>arquivos:<br />
+							<div class="filter_block">
+								<ul id="include_list">
+								</ul>
+							</div>
+						</td>
+						<td>
+							<div id="filter_list">
+								Filtros:
+								<table id="filter_table">
+									<tr><td class="include_button audio"><img src="/media/icons/seta_esquerda.png"></td><td>Audio (mp3, wav, ogg)</td><td class="exclude_button audio"><img src="/media/icons/seta_direita.png"></td></tr>
+									<tr><td class="include_button video"><img src="/media/icons/seta_esquerda.png"></td><td>Video (avi, mpg, mp4)</td><td class="exclude_button video"><img src="/media/icons/seta_direita.png"></td></tr>
+									<tr><td class="include_button documentos"><img src="/media/icons/seta_esquerda.png"></td><td>Documentos (doc, docx, pdf)</td><td class="exclude_button documentos"><img src="/media/icons/seta_direita.png"></td></tr>
+									<tr><td class="include_button imagens"><img src="/media/icons/seta_esquerda.png"></td><td>Imagens (jpg, bmp, png)</td><td class="exclude_button imagens"><img src="/media/icons/seta_direita.png"></td></tr>
+									<tr id="custom_filter_tr"><td class="include_button custom"><img src="/media/icons/seta_esquerda.png"></td><td><input type="text" id="custom_filter"></input></td><td class="exclude_button custom"><img src="/media/icons/seta_direita.png"></td></tr>
+									<tr><td></td><td><button class="css3button negative" id="adv_filter_button">Filtro avançado</button></td><td></td></tr>
+								</table>
+							</div>
+						</td>
+						<td>
+							Ignorar estes<br/>arquivos:<br />
+							<div class="filter_block">
+								<ul id="exclude_list">
+								</ul>
+							</div>
+						</td>
+					</tr>
+				</table>
+				<input type="hidden" name="wildcards-TOTAL_FORMS" value="0" id="id_wildcards-TOTAL_FORMS">
+				<input type="hidden" name="wildcards-INITIAL_FORMS" value="0">
+				<input type="hidden" name="wildcards-MAX_NUM_FORMS">
+			</div>
+			<hr>
 			<span id="field_error_0" class="field_error" style="display: none;">Preencha os campos abaixo corretamente<br/></span>
 			<p {% if hide_name %}class="hidden"{% endif %}>
 			<label>{{fileset_form.name.label}}: </label>{{ fileset_form.name }}
