Correção de bug no botão de submit

--- a/nimbus/filesets/templates/edit_fileset.html
+++ b/nimbus/filesets/templates/edit_fileset.html
@@ -69,6 +69,7 @@
 				<input type="hidden" name="wildcards-TOTAL_FORMS" value="0" id="id_wildcards-TOTAL_FORMS">
 				<input type="hidden" name="wildcards-INITIAL_FORMS" value="0">
 				<input type="hidden" name="wildcards-MAX_NUM_FORMS">
+			</div>
 			<p>
 			<label>{{fileset_form.name.label}}: </label>{{ fileset_form.name }}
 			</p>
