--- a/nimbus/procedures/templates/add_procedure.html
+++ b/nimbus/procedures/templates/add_procedure.html
@@ -2,8 +2,8 @@
 
 {% block headtags %}
 <script type="text/javascript" src="/media/js/procedures.js"></script>
-<script type="text/javascript" src="/media/js/filesets.js"></script>
-<script type="text/javascript" src="/media/js/schedules.js"></script>
+<!-- <script type="text/javascript" src="/media/js/filesets.js"></script> -->
+<!-- <script type="text/javascript" src="/media/js/schedules.js"></script> -->
 
 <link href="/media/css/procedures.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript">
