--- a/nimbus/base/templates/stat_block.html
+++ b/nimbus/base/templates/stat_block.html
@@ -12,6 +12,9 @@ Tipos possíveis: ok, warn, error
 		{% else %}
         {{job.start_time}}: Procedimento de {{job.backup_type}} de '{{job.procedure.name}}' para '{{job.procedure.computer.name}}'
 		{% endif %}
+		{% if job.human_general_status == "executando"%}
+		<span class="cancel_job">Cancelar execução</span>
+		{% endif %}
         <div class="clear"></div>
 	</h3>
 	<div id="job_{{job.jobid}}_details">
