--- a/nimbus/media/css/historico.css
+++ b/nimbus/media/css/historico.css
@@ -15,7 +15,7 @@
 .hide table thead th, .hide table tbody td{
     font-size: 11px;
 }
-.status_ok, .status_error, .status_warning, .status_waiting, .status_running{
+.status_ok, .status_error, .status_warning, .status_waiting, .status_running {
     -moz-border-radius: 3px;
     -khtml-border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -42,4 +42,19 @@
     padding: 4px;
     border: 1px solid #c3c3c3;
     
+}
+.cancel_job {
+    -moz-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    padding: 2px 4px;
+    font-weight: bold;
+    color: #fff;
+    text-shadow: black 0.1em 0.1em 0.2em;
+    display: block;
+    float: right;
+    /* width: 80px; */
+    margin-right: 8px;
+    background: #C91A1A
 }
