--- a/nimbus/base/templates/stat_block.html
+++ b/nimbus/base/templates/stat_block.html
@@ -12,8 +12,9 @@ Tipos possíveis: ok, warn, error
 		{% else %}
         {{job.start_time}}: Procedimento de {{job.backup_type}} de '{{job.procedure.name}}' para '{{job.procedure.computer.name}}'
 		{% endif %}
-		{% if job.human_general_status == "executando"%}
-		<span class="cancel_job">Cancelar execução</span>
+		{% if job.human_general_status == "executando" or job.human_general_status == "esperando" %}
+		<!-- <span class="cancel_job">Cancelar</span> -->
+		<button type="submit" class="cancel_job css3button negative" value="Desativar" id="{{job.jobid}}">Cancelar execução {{job.jobid}}</button>
 		{% endif %}
         <div class="clear"></div>
 	</h3>
