--- a/nimbus/offsite/templates/upload_queue.html
+++ b/nimbus/offsite/templates/upload_queue.html
@@ -27,14 +27,16 @@
 		<table id="overview_box">
 			<tr>
 				<td>Transferidos {{upload_done|floatformat}} de {{upload_total|floatformat}} MB ({% widthratio upload_done upload_total 100 %}%)</td>
-				<td>Velocidade atual: {{current_speed|floatformat}} kB/s</td>
+				<td>Velocidade atual: {{current_speed|floatformat:1}} kB/s</td>
 				<td>Tempo estimado: {{eta_str}}</td>
-				<td>Término estimado para {{end_time_str}}</td>
+				<td>Término estimado: {{end_time_str}}</td>
 			</tr>
 		</table>
 		<div id="fullbar">
 			{% for upload in uploads %}
-			<div id="queue_item_{{upload.id}}" class="part {% cycle 'par' 'impar' %}" style="width: {% widthratio upload.total upload_total 910 %}px">{% if upload.done > 0 %}<div class="icon {% if upload.speed > 0%}upload_icon_{% cycle 'par' 'impar' %}{% else %}stalled_icon_{% cycle 'par' 'impar' %}{% endif %}"></div>{% endif %}</div>
+			<!-- <div id="queue_item_{{upload.id}}" class="part {% cycle 'par' 'impar' %}" style="width: {% widthratio upload.total upload_total 100 %}%">{% if upload.done > 0 %}<div class="icon {% if upload.speed > 0%}upload_icon{% else %}stalled_icon{% endif %}"></div>{% endif %}</div> -->
+			<div id="queue_item_{{upload.id}}" class="part {% cycle 'par' 'impar' %}" style="width: {{upload.portion}}%">{% if upload.done > 0 %}<div class="icon {% if upload.speed > 0%}upload_icon{% else %}stalled_icon{% endif %}"></div>{% endif %}</div>
+
 			{% endfor %}
 		</div>
 		<div id="marker_box">
@@ -47,12 +49,12 @@
 					<tbody>
 						<tr><td>Procedimento:</td><td>{{upload.name}}</td></tr>
 						<tr><td>Concluído:</td><td>{{upload.done}} de {{upload.total}} MB ({% widthratio upload.done upload.total 100 %}%)</td></tr>
-						<tr><td>Volume atual:</td><td>procedure_98273094801834081234083242</td></tr>
-						<tr><td>Taxa de transferência:</td><td>{{upload.speed}} kB/s</td></tr>
-						<tr><td>Tempo estimado:</td><td>01:35:22</td></tr>
-						<tr><td>Adicionado a fila em:</td><td>08:35:29 de 08/02/2012</td></tr>
-						<tr><td>Inicio estimado para:</td><td>Em andamento</td></tr>
-						<tr><td>Conclusão estimada em:</td><td>09:23:58 de 08/02/2012</td></tr>
+						<tr><td>Volume atual:</td><td>{{upload.current_file}}</td></tr>
+						<tr><td>Taxa de transferência:</td><td>{{upload.speed|floatformat:1}} kB/s</td></tr>
+						<tr><td>Tempo restante estimado:</td><td>{{upload.eta_str}}</td></tr>
+						<tr><td>Adicionado a fila em:</td><td>{{upload.added}}</td></tr>
+						<tr><td>Inicio estimado para:</td><td>{{upload.estimate_start}}</td></tr>
+						<tr><td>Conclusão estimada em:</td><td>{{upload.end_time_str}}</td></tr>
 					</tbody>
 				</table>
 				<div class="progress_bar">
