--- a/nimbus/offsite/templates/upload_queue.html
+++ b/nimbus/offsite/templates/upload_queue.html
@@ -26,10 +26,10 @@
     <div class="block_content">
 		<table id="overview_box">
 			<tr>
-				<td>Transferidos {{upload_done|floatformat}} de {{upload_total|floatformat}} MB ({% widthratio upload_done upload_total 100 %}%)</td>
-				<td>Velocidade atual: {{current_speed|floatformat:1}} kB/s</td>
-				<td>Tempo estimado: {{eta_str}}</td>
-				<td>Término estimado: {{end_time_str}}</td>
+				<td>Transferidos <span id="upload_done">{{upload_done|floatformat}}</span> de <span id="upload_total">{{upload_total|floatformat}}</span> MB (<span id="percent_done">{% widthratio upload_done upload_total 100 %}</span>%)</td>
+				<td>Velocidade atual: <span id="current_speed">{{current_speed|floatformat:1}}</span> kB/s</td>
+				<td>Tempo estimado: <span id="eta_str">{{eta_str}}</span></td>
+				<td>Término estimado: <span id="end_time_str">{{end_time_str}}</span></td>
 			</tr>
 		</table>
 		<div id="fullbar">
@@ -47,14 +47,14 @@
 			<div class="upload_info" id="info_queue_item_{{upload.id}}" {% if forloop.first %}style="display: block;"{% endif %}>
 				<table>
 					<tbody>
-						<tr><td>Procedimento:</td><td>{{upload.name}}</td></tr>
-						<tr><td>Concluído:</td><td>{{upload.done}} de {{upload.total}} MB ({% widthratio upload.done upload.total 100 %}%)</td></tr>
-						<tr><td>Volume atual:</td><td>{{upload.current_file}}</td></tr>
-						<tr><td>Taxa de transferência:</td><td>{{upload.speed|floatformat:1}} kB/s</td></tr>
-						<tr><td>Tempo restante estimado:</td><td>{{upload.eta_str}}</td></tr>
-						<tr><td>Adicionado a fila em:</td><td>{{upload.added}}</td></tr>
-						<tr><td>Inicio estimado para:</td><td>{{upload.estimate_start}}</td></tr>
-						<tr><td>Conclusão estimada em:</td><td>{{upload.end_time_str}}</td></tr>
+						<tr><td>Procedimento:</td><td><span class="upload_name info_queue_item_{{upload.id}}">{{upload.name}}</span></td></tr>
+						<tr><td>Concluído:</td><td><span class="upload_done info_queue_item_{{upload.id}}">{{upload.done}}</span> de <span class="upload_total info_queue_item_{{upload.id}}">{{upload.total}}</span> MB (<span class="done_percent info_queue_item_{{upload.id}}">{% widthratio upload.done upload.total 100 %}</span>%)</td></tr>
+						<tr><td>Volume atual:</td><td><span class="current_file info_queue_item_{{upload.id}}">{{upload.current_file}}</span></td></tr>
+						<tr><td>Taxa de transferência:</td><td><span class="current_speed info_queue_item_{{upload.id}}">{{upload.speed|floatformat:1}}</span> kB/s</td></tr>
+						<tr><td>Tempo restante estimado:</td><td><span class="eta_str info_queue_item_{{upload.id}}">{{upload.eta_str}}</span></td></tr>
+						<tr><td>Adicionado a fila em:</td><td><span class="addes info_queue_item_{{upload.id}}">{{upload.added}}</span></td></tr>
+						<tr><td>Inicio estimado para:</td><td><span class="estimate_start info_queue_item_{{upload.id}}">{{upload.estimate_start}}</span></td></tr>
+						<tr><td>Conclusão estimada em:</td><td><span class="end_time_str info_queue_item_{{upload.id}}">{{upload.end_time_str}}</span></td></tr>
 					</tbody>
 				</table>
 				<div class="progress_bar">
@@ -64,7 +64,7 @@
 			{% endfor %}
 		</div>
     </div>
-
+	<button type="button" class="css3button positive big" id="submit_button" value="Salvar">Salvar</button>
     <div class="bendl"></div>
 	<div class="bendr"></div>
 
