--- a/nimbus/media/css/transfers.css
+++ b/nimbus/media/css/transfers.css
@@ -19,7 +19,7 @@
     border: 2px solid;
     border-top: none;
     padding: 10px;
-/*    background: #666;*/
+    background: #F8F8F8;
 }
 #marker_box {
     position: relative;
