--- a/nimbus/media/css/transfers.css
+++ b/nimbus/media/css/transfers.css
@@ -8,8 +8,8 @@
     position: relative;
     width: 910px;
     height: 50px;
-    border: 1px solid;
-    background: #484D50;
+/*    border: 1px solid;*/
+/*    background: #484D50;*/
 }
 #upload_info_box {
     position: relative;
@@ -37,24 +37,25 @@
     background: url(/media/icons/box_tip.png);
 }
 .part {
+    margin-left: 2px;
+    margin-right: 2px;
     position: relative;
     float: left;
-    height: 100%;
+    height: 48px;
     color: white;
     cursor: pointer;
-/*    padding-left: 10px;*/
-/*    padding-top: 5px;*/
-}
-.part span{
-    padding: 10px;
-}
-.impar {
-/*    background: #8D352F url(/media/images/upload_gradient.png);*/
+    border: solid 1px #000000;
     background: #8D352F;
 }
-.par {
-/*    background: #4B1612 url(/media/images/upload_gradient.png);*/
-    background: #4B1612;
+.name_block {
+    overflow: hidden;    
+}
+.name_block span {
+    display: block;
+    padding: 10px;
+    white-space: nowrap;
+    text-shadow: black 0px 0px 3px;
+    font-weight: bold;
 }
 .icon {
     z-index: 999;
@@ -83,6 +84,20 @@
     height: 100%;
     background: #65A700 url(/media/images/upload_gradient_selected.png);
 }
+.done_part {
+    height: 10px;
+/*    background: url(/media/images/upload_done_part.png);*/
+    background: gray;
+}
+.done_part_block {
+    position: absolute;
+    bottom: 0px;
+    height: 10px;
+    width: 100%;
+/*    background: url(/media/images/upload_done_part.png);*/
+/*    background: white;*/
+}
+
 .selected {
     background: #65A700 url(/media/images/upload_gradient_selected.png);
 }
