--- a/nimbus/offsite/templates/upload_queue.html
+++ b/nimbus/offsite/templates/upload_queue.html
@@ -18,8 +18,10 @@
 		<div class="bheadr"></div>
 		<h2>{{ title }}</h2>
 	</div>
-
-    <div class="block_content">
+    <div id="empty_content" class="block_content {% if uploads %}hidden{% endif %}">
+		<center>Não existe nenhum backup sendo enviado para o Offsite</center>
+	</div>
+	<div id="full_content" class="block_content {% if not uploads %}hidden{% endif %}">
 		<table id="overview_box">
 			<tr>
 				<td>Transferidos <span id="upload_done">{{upload_done|floatformat:1}}</span> de <span id="upload_total">{{upload_total|floatformat}}</span> MB (<span id="percent_done">{% widthratio upload_done upload_total 100 %}</span>%)</td>
@@ -58,7 +60,7 @@
 			{% endfor %}
 		</div>
     </div>
-	<button type="button" class="css3button positive big" id="submit_button" value="Atualizar">Salvar</button>
+	<!-- <button type="button" class="css3button positive big" id="submit_button" value="Atualizar">Salvar</button> -->
     <div class="bendl"></div>
 	<div class="bendr"></div>
 
