--- a/nimbus/offsite/templates/offsite_menu.html
+++ b/nimbus/offsite/templates/offsite_menu.html
@@ -2,7 +2,7 @@
     <ul>
 	    <li><a href="/offsite/detail">Detalhes do offsite</a></li>
 	    <li><a href="/offsite/edit">Editar configurações</a></li>
-        <li><a href="/offsite/list_uploadrequest">Uploads ativos</a></li>
+        <li><a href="/offsite/upload_queue">Uploads ativos</a></li>
         <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
         <li><a href="/offsite/list_offsite">Procedimentos do offsite</a></li>
     </ul>
