Alterada biblioteca de gráficos para armazenamento.

--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.highlighter.min.js"></script>
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pointLabels.js"></script>
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.cursor.min.js"></script>
+<script type="text/javascript" src="http://dygraphs.com/dygraph-combined.js"></script>
 <script type="text/javascript" src="/media/js/graphs.js"></script>
 <!-- this is here due stat_block.html -->
 <script type="text/javascript" src="/media/js/procedures.js"></script>
