--- a/nimbus/offsite/templates/detail.html
+++ b/nimbus/offsite/templates/detail.html
@@ -1,13 +1,6 @@
 {% extends "base.html" %}
 {% block headtags %}
-	<script type="text/javascript" src="/media/lib/js/jquery.jqplot.js"></script>
-	<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.barRenderer.js"></script>
-	<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pieRenderer.js"></script>
-	<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.categoryAxisRenderer.js"></script>
-	<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.highlighter.min.js"></script>
-	<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pointLabels.js"></script>
-	<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.cursor.min.js"></script>
-	<script type="text/javascript" src="/media/js/graphs.js"></script>
+<script type="text/javascript" src="http://dygraphs.com/dygraph-combined.js"></script>
 {% endblock %}
 {% block content %}
 
