--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -130,7 +130,7 @@
 				<!-- <p class="left"><a href="http://trynimbus.com">Nimbus Opensource</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a> | -->
 				<p class="left"><a href="http://trynimbus.com">Nimbus Professional</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a> |
 				<a href="/LICENSE/">Terms and License</a></p>
-				<p class="right">Nimbus Professional Backup v1.2</p>
+				<p class="right">Nimbus OpenSource Backup v1.3</p>
 			</div>
 			</div>
 		</div>
