Ajustando footer para opensource

--- a/nimbus/base/templates/about.html
+++ b/nimbus/base/templates/about.html
@@ -17,6 +17,6 @@
 		</div>
 	</div>
 	<!-- <a href="http://trynimbus.com">Nimbus Opensource</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a> -->
-	<a href="http://trynimbus.com">Nimbus Professional</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a>
+	<a href="http://trynimbus.com">Nimbus Opensource</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a>
 </div>
 {% endblock %}
