--- a/nimbus/wizard/templates/recovery.html
+++ b/nimbus/wizard/templates/recovery.html
@@ -3,10 +3,10 @@
 {% block content %}
 
     <form action="" method="post" id="{{page_name}}_form">
-        <p>Deseja iniciar a recuperação do sistema?</p>
+        <p>{% trans "Start system recovery?" %}</p>
         <p class="input_submit">
-            <a href="{{ next }}" class="submit left"><span>Não</span></a> &nbsp;
-            <input type="submit" class="submit right no_margin" value="Sim" />
+        <a href="{{ next }}" class="submit left"><span>{% trans "No" %}</span></a> &nbsp;
+        <input type="submit" class="submit right no_margin" value="{% trans "Yes" %}" />
         </p>
 
     </form>
