--- a/nimbus/wizard/templates/license.html
+++ b/nimbus/wizard/templates/license.html
@@ -11,9 +11,9 @@
         
         <p class="input_submit">
             {% if previous %}
-            <a href="{{ previous }}" class="css3button big"><span>Anterior</span></a> &nbsp;
+            <a href="{{ previous }}" class="css3button big"><span>{% trans "Previous"%}</span></a> &nbsp;
             {% endif %}
-            <button type="submit" class="css3button big positive floatright" value="Concordo">Concordo</button>
+            <button type="submit" class="css3button big positive floatright" value="{% trans "I Agree"%}">{% trans "I Agree" %}</button>
         </p>
                
         <input type="hidden" name="next" value="{{ next }}" />
