--- a/nimbus/wizard/templates/generic.html
+++ b/nimbus/wizard/templates/generic.html
@@ -1,4 +1,5 @@
 {% extends "base_wizard.html" %}
+{% load i18n %}
 
 {% block headtags %}
 <script type="text/javascript" src="/media/js/offsite.js"></script>
