--- a/nimbus/timezone/templates/timezoneconf.html
+++ b/nimbus/timezone/templates/timezoneconf.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block headtags %}
 <script type="text/javascript" src="/media/js/timezone.js"></script>
@@ -12,7 +13,7 @@
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
-		<h2>Configuração de Hora</h2>
+        <h2>{% trans "Time zone configuration" %}</h2>
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
@@ -20,7 +21,7 @@
         <form method="post" action="/timezone/config/">
             {% include "form.html" %}
  			<input type="hidden" value="{% url nimbus.timezone.views.area_request %}" id="area_request" name="area_request"/> 
-            <p><button type="submit" class="css3button big positive" value="Atualizar">Atualizar</button></p>
+            <p><button type="submit" class="css3button big positive" value="{% trans "Update" %}">{% trans "Update" %}</button></p>
         </form>
     
     </div>
